fix: links that was broken in the navbar + add class names

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
     flex: 1;
     justify-content: space-between;
 
-    padding: 32px;
+    padding: 32px 0;
     margin-bottom: 98px;
 }
 
@@ -39,13 +39,14 @@ header {
     font-weight: 700;
 }
 
-ul {
+.nav-ul {
     display: flex;
     gap: 1rem;
+    justify-content: space-between;
     list-style-type: none;   
 }
 
-.links a {
+.nav-links a {
     text-decoration:none;
     color: #E5E7EB;
     font-size: 18px;
@@ -72,6 +73,7 @@ ul {
     font-size: 18px;
     color: #E5E7EB;
     margin-bottom: 8px;
+    text-wrap: balance;
 }
 
 .container-hero button {
@@ -110,12 +112,12 @@ h3 {
 
 }
 
-ul {
+.service-ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
-li {
+.service-li {
     display: flex;
     display: block;
 }
@@ -128,7 +130,7 @@ li {
     border: 5px solid #3882F6;
 }
 
-li,div > p {
+.service-li, div > p {
     font-size: 18px;
     color: #1F2937;
     
